--- a/_config.yml
+++ b/_config.yml
@@ -13,19 +13,20 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Spelunking in Software
+title: Foobarcat
 email: matthew.ault@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  The technical blog of @aultimus, professional googler. Home for all my software shower thoughts
+  The technical blog of @aultimus. Home for all my software shower thoughts
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  aultimus
 
 # Build settings
 markdown: kramdown
-theme: midnight
+theme: jekyll-theme-midnight
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme
+- jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
