update linkedin url

--- a/_config.yml
+++ b/_config.yml
@@ -46,4 +46,4 @@ author:
   name: "Matthew Ault"
   email: "matthew [dot] ault [at] gmail [dot] com"
   homepage: "https://foobarcat.com"
-  linkedin: "https://www.linkedin.com/in/matthew-ault-366a4826/"
+  linkedin: "https://www.linkedin.com/in/m-ault/"
